--- a/index.html
+++ b/index.html
@@ -1113,6 +1113,7 @@
 									<div class="single-explore-img">
 										<img src="assets/images/explore/waterfalls/fodu ella.jpg" alt="Jodu Ella">
 										<div class="single-explore-img-info">
+											<button onclick="window.location.href='#'">most view</button>
 											<div class="single-explore-image-icon-box">
 												<ul>
 													<li>
@@ -1163,6 +1164,7 @@
 									<div class="single-explore-img">
 										<img src="assets/images/explore/waterfalls/huluganga waterfall.jpg" alt="Huluganga Waterfall">
 										<div class="single-explore-img-info">
+											<button onclick="window.location.href='#'">most view</button>
 											<div class="single-explore-image-icon-box">
 												<ul>
 													<li>
@@ -1213,6 +1215,7 @@
 									<div class="single-explore-img">
 										<img src="assets/images/explore/waterfalls/hunas falls.jpg" alt="Hunas Falls">
 										<div class="single-explore-img-info">
+											<button onclick="window.location.href='#'">most view</button>
 											<div class="single-explore-image-icon-box">
 												<ul>
 													<li>
@@ -1263,6 +1266,7 @@
 									<div class="single-explore-img">
 										<img src="assets/images/explore/waterfalls/lebanon waterfall.jpg" alt="Lebanon Waterfall">
 										<div class="single-explore-img-info">
+											<button onclick="window.location.href='#'">most view</button>
 											<div class="single-explore-image-icon-box">
 												<ul>
 													<li>
@@ -1313,6 +1317,7 @@
 									<div class="single-explore-img">
 										<img src="assets/images/explore/waterfalls/sari ella.jpg" alt="Bambarella Saree Ella">
 										<div class="single-explore-img-info">
+											<button onclick="window.location.href='#'">most view</button>
 											<div class="single-explore-image-icon-box">
 												<ul>
 													<li>
@@ -1363,6 +1368,7 @@
 									<div class="single-explore-img">
 										<img src="assets/images/explore/waterfalls/thaliya wetunu ella.jpg" alt="Thaliya Wetunu Ella">
 										<div class="single-explore-img-info">
+											<button onclick="window.location.href='#'">most view</button>
 											<div class="single-explore-image-icon-box">
 												<ul>
 													<li>
@@ -1631,9 +1637,9 @@
 											<div class="single-explore-txt bg-theme-5">
 												<h2><a href="#">Royal Botanic Gardens</a></h2>
 												<p class="explore-rating-price">
-													<a href="#">22 Km away</a> 
+													<a href="#">28 Km away</a> 
 													<span class="explore-price-box">
-														<span class="explore-price">Udunuwara village</span>
+														<span class="explore-price">Kandy City</span>
 													</span>
 													<a href="historical site">historical site</a>
 												</p>
@@ -1908,6 +1914,9 @@
             <div class="tradition-carousel" style="position:relative">
                 <!-- Carousel Images -->
                 <div class="tradition-carousel-inner">
+					<div class="tradition-item active">
+                        <img src="assets/images/explore/tradition/Sambal.jpg" alt="explore image 1">
+                    </div>
                     <div class="tradition-item active">
                         <img src="assets/images/explore/tradition/t1.png" alt="explore image 1">
                     </div>
@@ -1948,11 +1957,11 @@
         </div>
         <!-- Rest of your existing content remains unchanged -->
         <div class="single-explore-txt bg-theme-4">
-            <h2><a href="#">Campbell’s Lane Forest Reserve</a></h2>
+            <h2><a href="#">Pol Sambol / Thenkai Sambal</a></h2>
             <p class="explore-rating-price">
-                <a href="#">25 Km away</a>
+                <a href="#">Condiments</a>
                 <span class="explore-price-box">
-                    <span class="explore-price">Elkaduwa</span>
+                    <span class="explore-price">Sri Lankan Origin</span>
                 </span>
                 <a href="tradition">tradition</a>
             </p>
@@ -1960,7 +1969,7 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <p>
-                            This forest reserve is adjacent to Sembuwatta Lake, a man-made lake created from natural spring water. The area is known for its rich biodiversity and serene environment, making it a popular spot for nature enthusiasts.​
+                            Is a traditional Sri Lankan dish made from coconut, mostly used as an accompaniment with rice, string hoppers, hoppers and curries.It is a coconut relish, consisting of freshly grated coconut, shallots, dried whole chilies or chili powder, lime juice, and salt.Traditionally the ingredients are ground on a rectangular block of granite with a granite rolling-pin, known as a miris gala.
                         </p>
                     </div>
                 </div>
